--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="KnO-Xu-3Hb">
             <objects>
-                <tabBarController id="15k-8T-jsr" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarViewController" id="15k-8T-jsr" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SfW-gg-MDS">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -34,7 +34,7 @@
         <!--AuthViewController-->
         <scene sceneID="Mo0-Hg-9rV">
             <objects>
-                <viewController id="tXJ-rB-KB3" userLabel="AuthViewController" sceneMemberID="viewController">
+                <viewController id="tXJ-rB-KB3" userLabel="AuthViewController" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ILi-4G-fJm">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,7 +57,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="Ool-x5-oCq" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" modalTransitionStyle="coverVertical" id="CRf-1K-xys"/>
+                                    <segue destination="Ool-x5-oCq" kind="presentation" identifier="ShowWebView" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="CRf-1K-xys"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_of_Unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="gQy-HY-32F">
@@ -82,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nfz-nZ-PYd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-260.30534351145036" y="-1830.2816901408451"/>
+            <point key="canvasLocation" x="-873" y="-1830"/>
         </scene>
         <!--Web View View Controller-->
         <scene sceneID="hGx-dB-vcD">
@@ -138,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oLL-aG-MtN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="857.25190839694653" y="-1830.2816901408451"/>
+            <point key="canvasLocation" x="210" y="-1830"/>
         </scene>
         <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
@@ -327,24 +327,6 @@
             </objects>
             <point key="canvasLocation" x="-872" y="3"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="qOb-iu-Lt4">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Xr-Yh-tmW" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FY5-z3-omg">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="tXJ-rB-KB3" kind="relationship" relationship="rootViewController" id="T2y-ld-9Pk"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5F9-wA-2U4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1187.0229007633586" y="-1830.2816901408451"/>
-        </scene>
         <!--SplashViewController-->
         <scene sceneID="jdD-ca-ApS">
             <objects>
@@ -365,10 +347,31 @@
                             <constraint firstItem="pHr-NE-20J" firstAttribute="centerY" secondItem="xEH-wT-0cf" secondAttribute="centerY" id="dQv-5k-qHq"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="OAG-0K-tR1" kind="presentation" identifier="ShowAuthenticationScreenSegueIdentifier" modalPresentationStyle="overFullScreen" id="mAx-Ub-oDw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yfg-3k-4iW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2356" y="-1830"/>
+            <point key="canvasLocation" x="-3108" y="-1039"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JZL-Sg-8dW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OAG-0K-tR1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u34-ci-cAt">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tXJ-rB-KB3" kind="relationship" relationship="rootViewController" id="gmY-XV-eHk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fxF-70-Dur" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2112" y="-1830"/>
         </scene>
     </scenes>
     <resources>
